# Rafael-IoT-SDK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Kconfig  README.md  VERSION  default.config  ncp.config  ot-cli.config  rcp.config  requirements.txt
components/network/thread/: CMakeLists.txt  Kconfig  openthread_common.mk
components/network/thread/openthread/: CMakeLists.txt  component.mk
components/network/thread/openthread/include/openthread/platform/: radio.h
components/network/thread/openthread/src/core/common/: tasklet.cpp
components/network/thread/openthread/src/core/config/: mac.h
components/network/thread/openthread/src/core/mac/: mac.hpp
components/network/thread/openthread/src/core/radio/: radio.hpp
components/network/thread/openthread/src/ncp/: ncp_base.cpp  ncp_base_radio.cpp  ncp_config.h  ncp_cpc.cpp  ncp_cpc.hpp  ncp_hdlc.hpp
components/network/thread/openthread_port/: CMakeLists.txt  component.mk
components/network/thread/openthread_port/include/: openthread_port.h
components/network/thread/openthread_port/ncp/: ncp_cpc.cpp
components/network/thread/openthread_port/src/: ot_alarm.c  ot_crypto.c  ot_entropy.c  ot_freertos.c  ot_logging.c  ot_misc.c  ot_radio.c  ot_uart.c
components/network/thread/subg_openthread/: STYLE_GUIDE.md
components/network/thread/subg_openthread/examples/: CMakeLists.txt  Makefile-simulation  README.md  common-switches.mk
components/network/thread/subg_openthread/examples/apps/: CMakeLists.txt
components/network/thread/subg_openthread/examples/apps/cli/: CMakeLists.txt  README.md  ftd.cmake  main.c  mtd.cmake  radio.cmake
components/network/thread/subg_openthread/examples/apps/ncp/: CMakeLists.txt  ftd.cmake  main.c  mtd.cmake  rcp.cmake
components/network/thread/subg_openthread/include/openthread/: BUILD.gn  border_routing.h  child_supervision.h  cli.h  dataset.h  dns_client.h  dnssd_server.h  history_tracker.h  instance.h  link.h  link_raw.h  mesh_diag.h  message.h  nat64.h  ncp.h  netdata.h  netdiag.h  srp_server.h  tcp.h  tcp_ext.h  thread.h  thread_ftd.h  trel.h
components/network/thread/subg_openthread/include/openthread/platform/: crypto.h  diag.h  radio.h  udp.h
components/network/thread/subg_openthread/src/: CMakeLists.txt
components/network/thread/subg_openthread/src/cli/: BUILD.gn  CMakeLists.txt  README.md  README_BR.md  README_DATASET.md  README_HISTORY.md  README_NETDATA.md  README_SRP.md  README_SRP_SERVER.md  README_TCP.md  README_UDP.md  cli.cpp  cli.hpp  cli_br.cpp  cli_br.hpp  cli_coap.hpp  cli_coap_secure.hpp  cli_commissioner.hpp  cli_config.h  cli_dataset.cpp  cli_dataset.hpp  cli_history.cpp  cli_history.hpp  cli_joiner.hpp  cli_network_data.cpp  cli_network_data.hpp  cli_output.hpp  cli_srp_client.cpp  cli_srp_client.hpp  cli_srp_server.cpp  cli_srp_server.hpp  cli_tcp.cpp  cli_tcp.hpp  cli_udp.hpp  ftd.cmake  mtd.cmake  radio.cmake
components/network/thread/subg_openthread/src/core/: BUILD.gn  CMakeLists.txt  ftd.cmake  mtd.cmake  openthread-core-config.h  radio.cmake  radio_cli.cmake
components/network/thread/subg_openthread/src/core/api/: backbone_router_ftd_api.cpp  border_router_api.cpp  border_routing_api.cpp  dns_api.cpp  instance_api.cpp  ip6_api.cpp  link_api.cpp  link_metrics_api.cpp  netdata_publisher_api.cpp  netdiag_api.cpp  thread_api.cpp  thread_ftd_api.cpp
components/network/thread/subg_openthread/src/core/backbone_router/: backbone_tmf.cpp  backbone_tmf.hpp  bbr_leader.cpp  bbr_leader.hpp  bbr_local.cpp  bbr_local.hpp  bbr_manager.cpp  bbr_manager.hpp  multicast_listeners_table.hpp  ndproxy_table.cpp  ndproxy_table.hpp
components/network/thread/subg_openthread/src/core/border_router/: infra_if.hpp  (+2 more)
components/network/thread/subg_openthread/src/ncp/: ftd.cmake  mtd.cmake  ncp_base.cpp  ncp_base.hpp  ncp_base_ftd.cpp  ncp_base_mtd.cpp  ncp_hdlc.hpp  ncp_spi.cpp  ncp_spi.hpp  radio.cmake
components/network/thread/subg_openthread/src/posix/: CMakeLists.txt  Makefile-posix  README.md  cli.cmake  cli_readline.cpp  cli_stdio.cpp  client.cpp  daemon.cmake  main.c
components/network/zigbee/: CMakeLists.txt
components/network/zigbee/zboss/: CMakeLists.txt  component.mk
components/network/zigbee/zboss/aps/: aps_internal.h
components/network/zigbee/zboss/devtools/OTA/: CM3GP_bootloader.hex
components/network/zigbee/zboss/devtools/dump_converter/: Makefile_linux  Makefile_mingw  _convert.sh  dc_mingw.h
components/network/zigbee/zboss/devtools/production_config_generator/: generate_production_config.sh  production_config_generator.h  production_config_interface.h
components/network/zigbee/zboss/devtools/win_com_dump/: win_com_dump.vcxproj
components/network/zigbee/zboss/include/: zb_common.h  zb_config.h  zb_mac.h  zb_vendor.h  zboss_api_zcl.h
components/network/zigbee/zboss/include/zcl/: zb_zcl_custom_cluster.h  zb_zcl_door_lock.h  zb_zcl_el_measurement.h  zb_zcl_ota_upgrade.h  zb_zcl_power_config.h
components/network/zigbee/zboss/macsplit/macsplit_fw/: device.h
components/network/zigbee/zboss/ncp/: Doxyfile.ncp_ll_api  footer_ll_api.html
components/network/zigbee/zboss/ncp/low_level/: zb_ncp_ll_doc.h  zbncp_defs.h  zbncp_ll_impl.h  zbncp_ll_proto.h  zbncp_tr.h  zbncp_types.h
components/network/zigbee/zboss/ncp/transport/: zb_ncp_tr.h
components/network/zigbee/zboss/nwk/: nwk_internal.h
components/network/zigbee/zboss/platform/: .gitattributes
components/network/zigbee/zboss/platform/mac/: llmac.mk
components/network/zigbee/zboss/release_notes/: version.mk
components/network/zigbee/zboss/tests/mac_certification/: mac_verify_version.h  mac_verify_version_tmp.h
components/network/zigbee/zboss/tests/math/: tests_zb_int24.h  tests_zb_int48.h  tests_zb_uint24.h  tests_zb_uint48.h  type_tests_math.h
components/network/zigbee/zboss/tests/multitest_common/: Options-gen-tests-list  multitest_common.mk  zb_command_parser.h  zb_console_monitor.h  zb_multitest.h  zb_test_step.h
components/network/zigbee/zboss/zdo/: zdo_common.h
components/network/zigbee/zboss_port/: CMakeLists.txt  component.mk
(+2277 files in other folders)
